Adding Mustache template to format the message

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -178,6 +178,9 @@
   .message__title span {
     color: #999;
   }
+  /* .message__body{
+    display: inline-block;
+  } */
   
   @media (max-width: 600px) {
     * {
